prevent giant logos from stretching

--- a/wp-content/themes/MiniMakerFaire/less/panels.less
+++ b/wp-content/themes/MiniMakerFaire/less/panels.less
@@ -85,6 +85,7 @@
     }
     .header-logo-cont,
     .header-logo {
+		width: auto;
       max-width: 580px;
       max-height: 150px;
       margin-left: auto;
